Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58060

Wrong dialog buttons order with Material

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0
    • 5.8.0 RC
    • Quick: Controls 2
    • None
    • eba62334a9b646f61e73b5b734ec5971e56d672a 8b9f4364ba05c51ba4a0d8edcd53ea411824a590

      According to Material guidelines, affirmative actions are placed on the right side not on the left side.

      See: https://material.io/guidelines/components/dialogs.html#dialogs-specs

      The attached program creates a dialog with Ok and Cancel but they should appear as Cancel and Ok because Cancel is clearly a dismissive action which should be to the left of the affirmative action.

        1. discard.png
          8 kB
          Nikita Krupenko
        2. qqc2-material-dialog.qml
          0.4 kB
          Pier Luigi Fiorini
        For Gerrit Dashboard: QTBUG-58060
        # Subject Branch Project Status CR V

            krnekit Nikita Krupenko
            plfiorini Pier Luigi Fiorini
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes