Material: use proper layout of the buttons in the DialogButtonBox

Instead of using system button layout, use layout from macOS, which
better fits the Material Design guidelines and also used in the Android
QPA plugin.

Task-number: QTBUG-58060
Change-Id: I06381219b5f1ad0a32742487fd314a8017d82dfc
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>